src/App.css
@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: "Inter", sans-serif;
  color: #243e63;
}

html {
  scroll-behavior: smooth;
}

.row {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  max-width: 1200px;
  margin: 0 auto;
}

.highlight-color {
  color: #6415ff;
}

::placeholder {
    opacity: 50%;
}

#landing {
  padding: 0 32px;
  height: 100%;
}

p {
  line-height: 1.5;
}

.container {
  padding: 80px 0;
}

/* 

NAVIGATION BAR 

*/

.nav__container {
  padding: 40px 0;
}

.nav__row {
  display: flex;
  justify-content: space-between;
}

.nav__logo--pair {
  display: flex;
}

.nav__logo--title {
  color: #243e63;
  font-weight: 900;
  font-size: 24px;
  margin-left: 12px;
  margin-bottom: 4px;
  align-content: center;
  cursor: default;
}

.logo__img--wrapper {
  max-width: 40px;
  height: auto;
}

.logo__img {
  width: 100%;
}

.nav__list {
  display: flex;
  list-style-type: none;
}

.nav__link {
  font-size: 14px;
  font-weight: 600;
  margin: 0 36px;
  align-content: center;
  position: relative;
}

.nav__link--anchor {
  color: #243e63;
  text-decoration: none;
  cursor: pointer;
}

.nav__link--underline {
  position: absolute;
  width: 100%;
  border-bottom: 2px solid #6415ff;
  bottom: -8px;
  opacity: 0;
  transition: all 300ms ease;
}

.nav__link--underline-2 {
  position: absolute;
  width: 100%;
  border-bottom: 2px solid #6415ff;
  bottom: 2px;
  opacity: 0;
  transition: all 300ms ease;
}

.nav__members {
  display: flex;
  list-style-type: none;
}

.nav__link--login {
  margin-left: 24px;
  margin-right: 0;
  margin-top: 0;
  margin-bottom: 0;
  align-content: center;
  font-size: 14px;
  font-weight: 600;
  position: relative;
}

.nav__link:hover .nav__link--underline {
  opacity: 1;
}

.nav__link--login:hover .nav__link--underline-2 {
  opacity: 1;
}

.nav__link--primary {
  color: #fff;
}

.nav__members .nav__link {
  margin-right: 0;
}

.nav__button--sign-up {
  border: none;
  padding: 10px 32px;
  font-weight: 600;
  background-color: #6415ff;
  border-radius: 24px;
  line-height: 1.5;
  transition: all 300ms ease;
}

.nav__button--sign-up:hover {
  background-color: #4e11c8;
}

.not-working {
  cursor: not-allowed !important;
}

.button__menu {
  background-color: transparent;
  border: none;
  font-size: 26px;
  text-align: center;
  cursor: pointer;
  display: none;
}

.button__menu:hover {
  transform: translateY(-1px);
}

.menu__backdrop {
  position: absolute;
  background-color: #f7fafc;
  border: 1px solid lightgray;
  border-radius: 8px;
  top: 20px;
  left: 20px;
  right: 20px;
  bottom: 25%;
  z-index: 100;
  display: flex;
  align-items: center;
  justify-content: center;
  visibility: hidden;
  opacity: 0;
}

@keyframes slideIn {
  from {
    transform: translateX(100%);
  }
  to {
    transform: translateX(0);
  }
}

.menu--open .menu__backdrop {
  opacity: 1;
  visibility: visible;
  animation: slideIn 1s;
}

.button__menu--close {
  position: absolute;
  right: 10px;
  top: 10px;
  cursor: pointer;
}

.menu__list {
  list-style-type: none;
  margin-bottom: 24px;
  font-weight: 600;
}

.menu__list:nth-child(5) {
  margin-bottom: 40px;
}

.menu__list--link {
  text-decoration: none;
}

.menu__links {
  text-align: center;
}

.menu__link--primary {
  padding: 16px 34px;
  background-color: #6415ff;
  color: #f7fafc;
  border-radius: 40px;
  margin-top: 16px;
}

/* 

HEADER 

*/

header .container {
  height: calc(100vh - 124px);
  display: flex;
  align-items: center;
}

.header__row {
    justify-content: space-between;
}

.header__side--left {
  display: flex;
  flex-direction: column;
  width: 40%;
  padding-right: 48px;
}

.header__title {
  font-size: 36px;
  color: #1a202c;
  line-height: 1.25;
}

.header__description {
  margin: 32px 0;
}

.header__button {
  background-color: #6415ff;
  color: #fff;
  border: none;
  font-weight: 700;
  font-size: 16px;
  padding: 14px 22px;
  border-radius: 24px;
  width: 135px;
  position: absolute;
  top: 8px;
  left: 255px;
  z-index: 1;
}

.header__button:hover {
  background-color: #4e11c8;
}

.header__customers {
  color: #a0aec0;
  font-size: 12px;
  font-weight: 700;
  text-transform: uppercase;
  margin-top: 64px;
}

.header__illustration--wrapper {
  width: 60%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.header__img {
  margin-top: 16px;
  width: 100%;
  opacity: 50%;
  padding-right: 64px;
}

.header__illustration--img {
  width: 100%;
  max-width: 625px;
}

.header__email--submission {
  position: relative;
  display: flex;
  width: 100%;
}

.header__email--input {
  width: 400px;
  font-size: 16px;
  font-weight: 500;
  padding: 20px 192px 20px 32px;
  border: 2px solid rgb(229, 231, 235);
  border-radius: 50px;
  position: relative;
  z-index: 0;
  max-width: 400px;
}

/* 

FEATURES 

*/

#features .section__title {
  padding-top: 96px;
}

.features__row {
  flex-direction: column;
  padding: 0 32px;
}

.feature__description {
  display: flex;
  flex-direction: column;
}

.feature__title {
  color: #243e63;
  font-size: 24px;
}

.feature__para {
  color: #7c8ba1;
  margin-top: 16px;
  line-height: 2;
  font-weight: 500;
}

.feature__list {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  margin: 32px 0;
}

.feature {
  display: flex;
  flex-direction: row;
  padding: 32px 24px;
  width: calc(100% / 3);
}

.feature__img {
  width: 24px;
  height: 24px;
}

.feature__img--wrapper {
  display: flex;
  padding: 20px;
  margin-right: 20px;
  border: 1px solid #e5e7eb;
  border-radius: 50%;
  height: 64px;
}

.section__description {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.section__title {
  color: #6415ff;
  text-transform: uppercase;
  letter-spacing: 2px;
}
/* ... */

